--- a/public/index.html
+++ b/public/index.html
@@ -2,258 +2,206 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Employee FAQ Bot</title>
   <style>
-    :root {
-      --bg: #f6f7fb;
-      --card: #ffffff;
-      --text: #0f172a;
-      --muted: #64748b;
-      --primary: #2563eb;
-      --primary-ghost: rgba(37, 99, 235, .12);
-      --bot: #eef2ff;
-      --user: #e0f2fe;
-      --radius: 14px;
-      --shadow: 0 10px 30px rgba(2, 6, 23, .06);
+    :root{
+      --bg:#f5f7fb;
+      --card:#ffffff;
+      --bot:#eef2ff;
+      --user:#1b74e4;
+      --userText:#ffffff;
+      --muted:#7b8494;
+      --ring:#e6ebf5;
     }
-    * { box-sizing: border-box; }
-    html, body {
-      height: 100%;
-      margin: 0;
-      background: var(--bg);
-      color: var(--text);
-      font: 16px/1.5 system-ui, -apple-system, Segoe UI, Roboto, Inter, "Helvetica Neue", Arial, sans-serif;
+    *{box-sizing:border-box}
+    html,body{height:100%;margin:0;background:var(--bg);font-family:system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial,sans-serif;color:#111}
+    /* Card (kept narrow to look great inside Notion’s iframe) */
+    .wrap{max-width:680px;margin:24px auto;padding:0 12px}
+    .card{
+      background:var(--card);
+      border-radius:18px;
+      box-shadow:0 12px 30px rgba(27,54,94,.06), 0 2px 6px rgba(27,54,94,.04);
+      overflow:hidden;
+      border:1px solid var(--ring);
     }
-    .wrap {
-      max-width: 820px;
-      margin: 0 auto;
-      padding: 28px 18px 80px;
+    .header{
+      display:flex;align-items:center;gap:12px;
+      padding:14px 16px;border-bottom:1px solid var(--ring);
+      position:sticky;top:0;background:var(--card);z-index:1;
     }
-    .card {
-      background: var(--card);
-      border-radius: 20px;
-      box-shadow: var(--shadow);
-      padding: 18px;
+    .avatar{
+      width:32px;height:32px;border-radius:50%;
+      background:linear-gradient(135deg,#6ea8ff,#9ee7ff);
+      display:grid;place-items:center;color:#093c8d;font-weight:700;
+      border:1px solid #d6e4ff;
     }
-    .title {
-      font-weight: 800;
-      letter-spacing: .2px;
-      font-size: 22px;
-      margin: 0 0 14px;
-      text-align: center;
+    .title{font-weight:700}
+    .sub{font-size:12px;color:var(--muted)}
+    .room{height:min(62vh,560px);overflow:auto;background:
+      linear-gradient(#fff0, #fff0 70%, #fff0),
+      radial-gradient(90% 60% at 10% -10%, #ffffff 0, #ffffff 60%, #f7f9ff 100%);
+      padding:16px 12px;
     }
-    .messages {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      max-height: 62vh;
-      overflow: auto;
-      padding: 6px;
-      scroll-behavior: smooth;
+
+    /* Message list */
+    .msgs{list-style:none;margin:0;padding:0;display:flex;flex-direction:column;gap:10px}
+    .msg{display:flex;gap:8px;align-items:flex-end;max-width:90%}
+    .msg.bot{flex-direction:row}
+    .msg.user{flex-direction:row-reverse;align-self:flex-end}
+    .bubble{
+      padding:10px 12px;border-radius:16px;line-height:1.35;
+      box-shadow:0 1px 0 rgba(0,0,0,.04);
+      word-wrap:break-word;white-space:pre-wrap;
     }
-    .row {
-      display: flex;
-      gap: 10px;
-      align-items: flex-end;
+    .bot .bubble{background:var(--bot);color:#0f172a;border-top-left-radius:6px}
+    .user .bubble{background:var(--user);color:var(--userText);border-top-right-radius:6px}
+    .meta{font-size:11px;color:var(--muted);margin-top:4px}
+    .mini{width:22px;height:22px;border-radius:50%;background:#e9eefc;border:1px solid #dce4ff}
+
+    /* Typing indicator */
+    .dots{display:inline-flex;gap:4px;align-items:center}
+    .dot{width:6px;height:6px;background:#9aa6c9;border-radius:50%;opacity:.6;animation:b 1.4s infinite}
+    .dot:nth-child(2){animation-delay:.2s}.dot:nth-child(3){animation-delay:.4s}
+    @keyframes b{0%,100%{transform:translateY(0);opacity:.5}50%{transform:translateY(-3px);opacity:1}}
+
+    /* Input bar */
+    .input{
+      display:flex;gap:10px;padding:12px;border-top:1px solid var(--ring);background:var(--card);
+      position:sticky;bottom:0
     }
-    .row.user { justify-content: flex-end; }
-    .avatar {
-      width: 30px; height: 30px; border-radius: 50%;
-      background: var(--primary-ghost);
-      display: inline-flex; align-items: center; justify-content: center;
-      color: var(--primary);
-      font-size: 14px; flex: 0 0 auto;
+    input[type="text"]{
+      flex:1;border:1px solid var(--ring);border-radius:999px;padding:12px 14px;
+      font-size:15px;outline:none;background:#fff;box-shadow:inset 0 1px 2px rgba(12,26,75,.03)
     }
-    .row.user .avatar { background: #cffafe; color: #0284c7; }
-    .bubble {
-      max-width: 78%;
-      padding: 10px 12px;
-      border-radius: var(--radius);
-      background: var(--bot);
-      border: 1px solid rgba(2, 6, 23, .06);
-      white-space: pre-wrap;
-      word-wrap: break-word;
+    input[type="text"]::placeholder{color:#a0a7b5}
+    button{
+      border:0;border-radius:999px;background:var(--user);color:#fff;
+      font-weight:600;padding:0 18px;min-width:72px;cursor:pointer;height:42px;
+      box-shadow:0 4px 10px rgba(27,116,228,.25)
     }
-    .row.user .bubble {
-      background: var(--user);
-      border-top-right-radius: 6px;
-    }
-    .row.bot .bubble {
-      border-top-left-radius: 6px;
-    }
-    .muted { color: var(--muted); }
-    .inputBar {
-      position: sticky;
-      bottom: 0;
-      margin-top: 14px;
-      display: grid;
-      grid-template-columns: 1fr auto;
-      gap: 10px;
-      background: transparent;
-    }
-    .inputBar input {
-      border: 1px solid #e5e7eb;
-      border-radius: 12px;
-      padding: 12px 14px;
-      outline: none;
-      font-size: 16px;
-      background: #fff;
-      box-shadow: var(--shadow);
-    }
-    .inputBar button {
-      border: 0;
-      padding: 12px 16px;
-      border-radius: 12px;
-      background: var(--primary);
-      color: #fff;
-      font-weight: 600;
-      cursor: pointer;
-      box-shadow: 0 8px 20px rgba(37,99,235,.25);
-    }
-    .inputBar button[disabled] {
-      opacity: .6; cursor: not-allowed; box-shadow: none;
-    }
-    .typing {
-      display: inline-flex; gap: 4px; align-items: center;
-    }
-    .dot {
-      width: 6px; height: 6px; border-radius: 50%; background: #94a3b8;
-      animation: bounce 1.2s infinite ease-in-out;
-    }
-    .dot:nth-child(2) { animation-delay: .15s; }
-    .dot:nth-child(3) { animation-delay: .3s; }
-    @keyframes bounce {
-      0%, 80%, 100% { transform: translateY(0); opacity: .5; }
-      40% { transform: translateY(-5px); opacity: 1; }
-    }
-    .footer {
-      margin-top: 10px;
-      text-align: center;
-      font-size: 12px;
-      color: var(--muted);
+    button:disabled{opacity:.6;cursor:not-allowed;box-shadow:none}
+
+    /* Small screens inside Notion */
+    @media (max-width:520px){
+      .room{height:55vh}
+      .wrap{margin:12px auto}
+      .title{font-size:15px}
+      .sub{display:none}
     }
   </style>
 </head>
 <body>
   <div class="wrap">
-    <h1 class="title">Employee FAQ Bot</h1>
-
-    <div class="card">
-      <div id="messages" class="messages" aria-live="polite">
-        <div class="row bot">
-          <div class="avatar" aria-hidden="true">🤖</div>
-          <div class="bubble">
-            Hi! Ask me anything from your Employee Handbook database.
-          </div>
+    <div class="card" role="application" aria-label="Employee FAQ chat">
+      <div class="header">
+        <div class="avatar">E</div>
+        <div>
+          <div class="title">Employee FAQ Bot</div>
+          <div class="sub">Answers from your Notion database</div>
         </div>
       </div>
 
-      <form id="bar" class="inputBar">
-        <input id="q" type="text" placeholder="Type your question…" autocomplete="off" />
+      <div id="room" class="room">
+        <ul id="msgs" class="msgs">
+          <li class="msg bot">
+            <div class="mini"></div>
+            <div>
+              <div class="bubble">Hi! Ask me anything about company policies, onboarding, or recruiting.</div>
+              <div class="meta">Bot • just now</div>
+            </div>
+          </li>
+        </ul>
+      </div>
+
+      <form id="form" class="input" autocomplete="off">
+        <input id="q" type="text" placeholder="Type your question…" aria-label="Question" />
         <button id="send" type="submit">Send</button>
       </form>
     </div>
 
-    <div class="footer">Powered by your Notion DB</div>
+    <p style="text-align:center;font-size:12px;color:#9aa6b2;margin:10px 0 0">
+      Powered by your Notion DB
+    </p>
   </div>
 
   <script>
-    const $ = (sel) => document.querySelector(sel);
-    const messages = $("#messages");
-    const input = $("#q");
-    const btn = $("#send");
-    const form = $("#bar");
+    const form = document.getElementById('form');
+    const input = document.getElementById('q');
+    const list  = document.getElementById('msgs');
+    const room  = document.getElementById('room');
 
-    function addMessage(text, who = "bot") {
-      const row = document.createElement("div");
-      row.className = `row ${who}`;
-      const avatar = document.createElement("div");
-      avatar.className = "avatar";
-      avatar.textContent = who === "user" ? "🧑" : "🤖";
-      avatar.setAttribute("aria-hidden", "true");
-      const bubble = document.createElement("div");
-      bubble.className = "bubble";
-      bubble.textContent = text;
-      if (who === "user") { row.append(bubble, avatar); }
-      else { row.append(avatar, bubble); }
-      messages.appendChild(row);
-      messages.scrollTop = messages.scrollHeight;
-      return bubble;
+    function addMsg(role, text, opts={}){
+      const li = document.createElement('li');
+      li.className = `msg ${role}`;
+      li.innerHTML = role === 'user'
+        ? `<div class="mini"></div>
+           <div>
+             <div class="bubble">${escapeHtml(text)}</div>
+             <div class="meta">You • ${opts.when || 'now'}</div>
+           </div>`
+        : `<div class="mini"></div>
+           <div>
+             <div class="bubble">${escapeHtml(text)}</div>
+             <div class="meta">Bot • ${opts.when || 'now'}</div>
+           </div>`;
+      list.appendChild(li);
+      room.scrollTop = room.scrollHeight;
+      return li;
     }
 
-    function addTyping() {
-      const row = document.createElement("div");
-      row.className = "row bot";
-      const avatar = document.createElement("div");
-      avatar.className = "avatar";
-      avatar.textContent = "🤖";
-      avatar.setAttribute("aria-hidden", "true");
-      const bubble = document.createElement("div");
-      bubble.className = "bubble";
-      bubble.innerHTML = `<span class="typing"><span class="dot"></span><span class="dot"></span><span class="dot"></span></span>`;
-      row.append(avatar, bubble);
-      messages.appendChild(row);
-      messages.scrollTop = messages.scrollHeight;
-      return row; // return the whole row so we can remove it
+    function addTyping(){
+      const li = document.createElement('li');
+      li.className = 'msg bot';
+      li.innerHTML = `<div class="mini"></div>
+        <div>
+          <div class="bubble"><span class="dots">
+            <span class="dot"></span><span class="dot"></span><span class="dot"></span>
+          </span></div>
+          <div class="meta">Bot is typing…</div>
+        </div>`;
+      list.appendChild(li);
+      room.scrollTop = room.scrollHeight;
+      return li;
     }
 
-    async function ask(question) {
-      // prefer POST; your API also supports GET ?q=
-      try {
-        const res = await fetch("/api/ask", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ question })
-        });
-        if (!res.ok) {
-          const text = await res.text().catch(() => "");
-          throw new Error(text || `Request failed (${res.status})`);
-        }
-        const data = await res.json();
-        return data.answer ?? JSON.stringify(data);
-      } catch (e) {
-        // fallback GET for older deployments
-        try {
-          const res = await fetch(`/api/ask?q=${encodeURIComponent(question)}`);
-          const data = await res.json();
-          if (data.answer) return data.answer;
-          throw new Error(JSON.stringify(data));
-        } catch (err) {
-          throw e; // show the original error
-        }
+    function escapeHtml(s){
+      return String(s).replace(/[&<>"']/g, m =>
+        ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#039;'}[m])
+      );
+    }
+
+    async function ask(q){
+      const res = await fetch(`/api/ask?q=${encodeURIComponent(q)}`);
+      if(!res.ok){
+        let msg = 'Sorry, something went wrong.';
+        try{ const j = await res.json(); if(j.error) msg = j.error; }catch{}
+        throw new Error(msg);
       }
+      return res.json();
     }
 
-    form.addEventListener("submit", async (ev) => {
-      ev.preventDefault();
+    form.addEventListener('submit', async (e)=>{
+      e.preventDefault();
       const q = input.value.trim();
-      if (!q) return;
+      if(!q) return;
+      input.value = ''; input.focus();
 
-      addMessage(q, "user");
-      input.value = "";
-      input.focus();
-      btn.disabled = true;
-
-      const typingRow = addTyping();
-      try {
-        const a = await ask(q);
-        typingRow.remove();
-        addMessage(a || "No answer found.", "bot");
-      } catch (err) {
-        typingRow.remove();
-        addMessage(`Error: ${err.message || err}`, "bot");
-      } finally {
-        btn.disabled = false;
+      addMsg('user', q);
+      const typing = addTyping();
+      try{
+        const { answer } = await ask(q);
+        typing.remove();
+        addMsg('bot', answer || "I couldn't find an exact match. Try rephrasing?");
+      }catch(err){
+        typing.remove();
+        addMsg('bot', err.message || 'Error fetching answer.');
       }
     });
 
-    // Submit on Enter (without adding newline)
-    input.addEventListener("keydown", (e) => {
-      if (e.key === "Enter" && !e.shiftKey) {
-        e.preventDefault();
-        form.requestSubmit();
-      }
+    // Submit on Enter (without creating newline)
+    input.addEventListener('keydown', (e)=>{
+      if(e.key === 'Enter'){ e.preventDefault(); form.dispatchEvent(new Event('submit')); }
     });
   </script>
 </body>
